--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <myapp>Loading...</myapp>
   </body>
 </html>
