--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     </script>
   </head>
   <!-- 3. Display the application -->
-  <body>
-    <myapp>Loading...</myapp>
+  <body >Loading...
   </body>
 </html>
