--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="print.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
