--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title>PDT planner</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="PDT planner"/>
+    <meta property="og:image" content="img/thumbnail.png"/>
+    <meta property="og:site_name" content="PDT planner"/>
+    <meta property="og:description" content="Plan je PDT studietraject!"/>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="print.css">
