--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="http://www.pepijnwillekens.com/PDTplanner/"/>
     <meta property="og:site_name" content="PDT planner"/>
     <meta property="og:description" content="Plan je PDT studietraject!"/>
-
+    <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="print.css">
