fixed og:image tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="PDT planner"/>
-    <meta property="og:image" content="img/thumbnail.png"/>
+    <meta property="og:image" content="http://www.pepijnwillekens.com/PDTplanner/img/thumbnail.png"/>
     <meta property="og:url" content="http://www.pepijnwillekens.com/PDTplanner/"/>
     <meta property="og:site_name" content="PDT planner"/>
     <meta property="og:description" content="Plan je PDT studietraject!"/>
